--- a/themes/chaklam/layouts/index.html
+++ b/themes/chaklam/layouts/index.html
@@ -698,7 +698,7 @@
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>chaklam@ait.asia</p>
+              <p>enquiry@aibrainlab.co</p>
             </div>
           </div>
         </div>
